--- a/views/template.xhtml
+++ b/views/template.xhtml
@@ -7,7 +7,7 @@
     <meta name="author" content="Andrea Cecchin, Rolando Sartorello, Denis Benato, Andrea Signori" />
     <meta name="description" content="Sito di esposizione di grappe" />
     <meta name="language" content="italian it" />
-    <link href="../css/desktop_style.css" rel="stylesheet" type="text/css" />
+    <link href="./css/desktop_style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
     <header class="header">
