Motore di template migliorato

--- a/views/pages/index.xhtml
+++ b/views/pages/index.xhtml
@@ -1,1 +1,16 @@
-{{include template}}
+<div class="box">
+    <h2>{{fill titolo}}</h2>
+    {{fill articolo unsafe}}
+  </div>
+  <div class="box">
+    <h2>{{fill titolo}}</h2>
+    {{fill articolo unsafe}}
+  </div>
+  <div class="box">
+    <h2>{{fill titolo}}</h2>
+    {{fill articolo unsafe}}
+  </div>
+  <div class="box">
+    <h2>{{fill titolo}}</h2>
+    {{fill articolo unsafe}}
+  </div>
