--- a/views/template.xhtml
+++ b/views/template.xhtml
@@ -25,24 +25,9 @@
           <h2>News Letter</h2>
           <p>get good you little faggot</p>
         </div>
-        </aside>
+      </aside>
       <section class="section">
-        <div class="box">
-          <h2>{{fill titolo}}</h2>
-          {{fill articolo unsafe}}
-        </div>
-        <div class="box">
-          <h2>{{fill titolo}}</h2>
-          {{fill articolo unsafe}}
-        </div>
-        <div class="box">
-          <h2>{{fill titolo}}</h2>
-          {{fill articolo unsafe}}
-        </div>
-        <div class="box">
-          <h2>{{fill titolo}}</h2>
-          {{fill articolo unsafe}}
-        </div>
+        {{forward content}}
       </section>
     </main>
     {{include components/footer}}
