--- a/css/desktop_style.css
+++ b/css/desktop_style.css
@@ -1,97 +1,97 @@
-*{
-  box-sizing: border-box;
-}
-
 body{
   margin: 0;
+  height: 100%;
+  font-family: Arial, Helvetica, sans-serif;
+  box-sizing: border-box;
+}
+a {
+  text-decoration: none;
 }
 /*------------------- css header nav------------------*/
-.header{
-  box-shadow: 1px 1px 4px 0 rgba(0,0,0,.1);
-  width: 100%;
-  background-color: #f2f2f2;
-}
-.navbar{
+.header {
+  box-shadow: 1px 1px 4px 0 rgba(0, 0, 0, .1);
   overflow: hidden;
-  width: 100%;
+  top: 0;
+  background-color: #707070;
 }
-.navbar .navTitle{
+.navTitle {
   float: left;
   padding-left: 30px;
 }
-.navbar .menu{
-  padding: 0;
+.menu {
   margin: 0;
   list-style: none;
-  overflow: hidden;
-
+  padding-right: 30px;
 }
+
 /*------------------------css menu nav-------------------------*/
-.menu .item-li{
+.menu .item-li {
   float: left;
   padding: 5px;
 }
-.menu .item-li .item-a:hover{
+.menu .item-li .item-a:hover {
   background-color: #595959;
   color: white;
 }
-.menu .item-li .item-a{
+.menu .item-li .item-a {
   color: black;
   background-color: #ffffff;
   display: block;
-  padding: 15px 15px;
-  border: 1px solid #f4f4f4;
-  text-decoration: none;
-  box-shadow: 1px 1px 4px 0 rgba(0,0,0,.2);
+  padding: 5px 10px;
+  border: 1px solid #a4a4a4;
 }
-
-.header .menu{
-  max-height: none;
+.header .menu {
   float: right;
 }
 /*-----------------------css main aside sec ------------------------*/
-.main{
+.main {
   display: flex;
+  height: 100%;
+  position: fixed;
+  overflow: hidden;
 }
-.aside{
+.aside {
   width: 25%;
   float: left;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
+  overflow-y: auto;
 }
-.section{
+.section {
   width: 75%;
   float: left;
   padding-left: 10px;
   padding-right: 10px;
   border-right: 1px solid #f4f4f4;
-  box-shadow: 1px 1px 4px 0 rgba(0,0,0,.9);
-  display: table;
+  box-shadow: 1px 1px 4px 0 rgba(0, 0, 0, .9);
+  overflow-y: scroll;
 }
 /*---------------------css box aside section--------------*/
-.aside .box{
+.aside .box {
   width: 100%;
-
   overflow: auto;
   padding-left: 10px;
   padding-right: 10px;
   border-right: 1px solid #f4f4f4;
   box-shadow: 0px 0px 4px  rgba(0,0,0,.9);
 }
-.aside .box p{
+.aside .box p {
   padding: 0px 20px 0px 20px;
   text-align: justify;
 }
 
-.section .box p{
+.section .box p {
   padding: 0px 20px 0px 20px;
   text-align: justify;
-
+  
 }
 /*---------------------css footer--------------*/
-.footer{
+.footer {
   text-align: center;
   padding: 10px;
   background-color: #f4f4f4;
+  bottom: 0;
+  position: fixed;
+  width: 100%;
 }
