--- a/views/template.xhtml
+++ b/views/template.xhtml
@@ -11,7 +11,7 @@
   </head>
   <body>
     {{include components/header}}
-    <main class="main">
+    <div class="main">
       <aside class="aside">
         <div class="box">
           <h2>Chi Siamo?</h2>
@@ -26,10 +26,10 @@
           <p>get good you little faggot</p>
         </div>
       </aside>
-      <section class="section">
+      <div class="section">
         {{forward content}}
-      </section>
-    </main>
+      </div>
+    </div>
     {{include components/footer}}
 
   </body>
