--- a/css/desktop_style.css
+++ b/css/desktop_style.css
@@ -3,15 +3,17 @@ body{
   height: 100%;
   font-family: Arial, Helvetica, sans-serif;
   box-sizing: border-box;
+  display: flex;
 }
 a {
   text-decoration: none;
 }
 /*------------------- css header nav------------------*/
 .header {
+  /* position: fixed; */
+  margin: 0;
   box-shadow: 1px 1px 4px 0 rgba(0, 0, 0, .1);
-  overflow: hidden;
-  top: 0;
+  width: 100%;
   background-color: #707070;
 }
 .navTitle {
@@ -40,14 +42,14 @@ a {
   padding: 5px 10px;
   border: 1px solid #a4a4a4;
 }
-.header .menu {
+.menu {
   float: right;
 }
 /*-----------------------css main aside sec ------------------------*/
 .main {
+  /* position: fixed; */
   display: flex;
-  height: 100%;
-  position: fixed;
+  height: 100vh;
   overflow: hidden;
 }
 .aside {
@@ -57,6 +59,7 @@ a {
   flex-direction: column;
   align-items: flex-start;
   overflow-y: auto;
+  overflow-x: hidden;
 }
 .section {
   width: 75%;
@@ -92,6 +95,5 @@ a {
   padding: 10px;
   background-color: #f4f4f4;
   bottom: 0;
-  position: fixed;
   width: 100%;
 }
