--- a/db/desktop_style.css
+++ b/db/desktop_style.css
@@ -3,7 +3,6 @@ body{
   font-family: Arial, Helvetica, sans-serif;
   box-sizing: border-box;
   display: block;
-  overflow-y: hidden;
 }
 a {
   text-decoration: none;
@@ -48,8 +47,9 @@ a {
 }
 /*-----------------------css main aside sec ------------------------*/
 .main {
+  /* position: fixed; */
   display: flex;
-  width: 100%;
+  height: 100%;
   overflow: hidden;
   height: 80vh;
 }
@@ -93,11 +93,8 @@ a {
 /*---------------------css footer--------------*/
 .footer {
   text-align: center;
-  padding: 0px;
+  padding: 10px;
   background-color: #f4f4f4;
   width: 100%;
   height: 10vh;
-  margin: 0;
-  vertical-align: middle;
-  display:  inline-block;
-}
+}dd
