--- a/views/template.xhtml
+++ b/views/template.xhtml
@@ -12,7 +12,7 @@
   <body>
     {{include components/header}}
     <div class="main">
-      <aside class="aside">
+      <div class="aside">
         <div class="box">
           <h2>Chi Siamo?</h2>
           <p>Siamo un piccolo sito Web in cui trattiamo di discussioni sulla grappa servita in bricco e illustriamo ai nostri visitatori alcune loro caratteristiche.</p>
@@ -25,7 +25,7 @@
           <h2>News Letter</h2>
           <p>get good you little faggot</p>
         </div>
-      </aside>
+      </div>
       <div class="section">
         {{forward content}}
       </div>
