--- a/views/components/footer.xhtml
+++ b/views/components/footer.xhtml
@@ -1,3 +1,3 @@
-<footer class="footer">
+<div class="footer">
     <p>Filiale di BriccoInGrappa SRL | Per ogni bricco ce ne &egrave; una ;)</p>
-</footer>
+</div>
