--- a/views/components/header.xhtml
+++ b/views/components/header.xhtml
@@ -1,5 +1,5 @@
-<header class="header">
-    <nav class="navbar">
+<div class="header">
+    <div class="navbar">
     <h1 class="navTitle">Distilleria San Rispino</h1>
     <ul class="menu">
         <li class="item-li"><a href="#" class="item-a">Home</a></li>
@@ -7,5 +7,5 @@
         <li class="item-li"><a href="#" class="item-a">About</a></li>
         <li class="item-li"><a href="#" class="item-a">Login</a></li>
     </ul>
-    </nav>
-</header>
+</div>
+</div>
