Spostata aside altrove...

--- a/views/template.xhtml
+++ b/views/template.xhtml
@@ -13,18 +13,7 @@
     {{include components/header}}
     <div class="main">
       <div class="aside">
-        <div class="box">
-          <h2>Chi Siamo?</h2>
-          <p>Siamo un piccolo sito Web in cui trattiamo di discussioni sulla grappa servita in bricco e illustriamo ai nostri visitatori alcune loro caratteristiche.</p>
-        </div>
-        <div class="box">
-          <h2>News Letter</h2>
-          <p>get good you little faggot</p>
-        </div>
-        <div class="box">
-          <h2>News Letter</h2>
-          <p>get good you little faggot</p>
-        </div>
+        {{forward aside}}
       </div>
       <div class="section">
         {{forward content}}
