--- a/views/components/aside.xhtml
+++ b/views/components/aside.xhtml
@@ -1,14 +1,36 @@
+<link href="./css/desktop/aside.css" rel="stylesheet" type="text/css" />
 <div class="aside">
   <div class="box">
-    <h2>{{fill title1}}</h2>
-    <p>Siamo un piccolo sito Web in cui trattiamo di discussioni sulla grappa servita in bricco e illustriamo ai nostri visitatori alcune loro caratteristiche.</p>
+    <h5>Commenti recenti :</h5>
   </div>
-  <div class="box">
-    <h2>News Letter</h2>
-    <p>get good you little faggot</p>
-  </div>
-  <div class="box">
-    <h2>News Letter</h2>
-    <p>get good you little faggot</p>
+  <div class="comments">
+    <div class="box">
+      <h3>{{fill title1}}</h2>
+      <p>{{fill comment1}}</p>
+    </div>
+    <div class="box">
+      <h3>{{fill title2}}</h2>
+      <p>{{fill comment2}}</p>
+    </div>
+    <div class="box">
+      <h3>{{fill title3}}</h2>
+      <p>{{fill comment3}}</p>
+    </div>
+    <div class="box">
+      <h3>{{fill title4}}</h2>
+      <p>{{fill comment4}}</p>
+    </div>
+    <div class="box">
+      <h3>{{fill title4}}</h2>
+      <p>{{fill comment4}}</p>
+    </div>
+    <div class="box">
+      <h3>{{fill title5}}</h2>
+      <p>{{fill comment6}}</p>
+    </div>
+    <div class="box">
+      <h3>{{fill title6}}</h2>
+      <p>{{fill comment6}}</p>
+    </div>
   </div>
 </div>
