--- a/views/components/header.xhtml
+++ b/views/components/header.xhtml
@@ -1,11 +1,12 @@
+<link href="./css/desktop/header.css" rel="stylesheet" type="text/css" />
 <div class="header">
     <div class="navbar">
-    <h1 class="navTitle">Distilleria San Rispino</h1>
-    <ul class="menu">
-        <li class="item-li"><a href="#" class="item-a">Home</a></li>
-        <li class="item-li"><a href="#" class="item-a">News</a></li>
-        <li class="item-li"><a href="#" class="item-a">About</a></li>
-        <li class="item-li"><a href="#" class="item-a">Login</a></li>
-    </ul>
-</div>
+        <h2 class="navTitle">Distilleria San Rispino</h2>
+        <ul class="menu">
+            <li class="item-li"><a href="#" class="item-a">Home</a></li>
+            <li class="item-li"><a href="#" class="item-a">News</a></li>
+            <li class="item-li"><a href="#" class="item-a">About</a></li>
+            <li class="item-li"><a href="#" class="item-a">Login</a></li>
+        </ul>
+    </div>
 </div>
