--- a/views/template.xhtml
+++ b/views/template.xhtml
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1-strict.dtd">
+﻿<!DOCTYPE HTML PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="it" lang="it" >
   <head>
     <title>Distilleria</title>
@@ -12,9 +12,9 @@
   <body>
     {{include components/header}}
     <div class="main">
-      {{forward aside}}
+      {{forward components/aside}}
       <div class="section">
-        {{forward content}}
+        {{forward content}} 
       </div>
     </div>
     {{include components/footer}}
