fix commetni recenti titolo min-height

--- a/css/desktop/components/aside.css
+++ b/css/desktop/components/aside.css
@@ -6,6 +6,9 @@
     flex-direction: column;
     overflow: hidden;
 }
+.headbox {
+    min-height: 55px;
+}
 .aside .box {
     width: 100%;
     padding-left: 10px;
