--- a/views/components/aside.xhtml
+++ b/views/components/aside.xhtml
@@ -1,5 +1,5 @@
 <div class="aside">
-  <div class="box">
+  <div class="box headbox">
     <h5>Commenti recenti :</h5>
   </div>
   <div class="comments">
