Creata la pagina di login, modificato il modo in si carica il css, ready to startq

--- a/views/components/aside.xhtml
+++ b/views/components/aside.xhtml
@@ -1,3 +1,4 @@
+<link href="./css/{{fill target_platform}}/components/aside.css" rel="stylesheet" type="text/css" />
 <div class="aside">
   <div class="box headbox">
     <h5>Commenti recenti :</h5>
