--- a/views/components/header.xhtml
+++ b/views/components/header.xhtml
@@ -1,3 +1,4 @@
+<link href="./css/{{fill target_platform}}/components/header.css" rel="stylesheet" type="text/css" />
 <div class="header">
     <div class="navbar">
         <h2 class="navTitle">Distilleria San Rispino</h2>
@@ -5,7 +6,7 @@
             <li class="item-li"><a href="#" class="item-a">Home</a></li>
             <li class="item-li"><a href="#" class="item-a">News</a></li>
             <li class="item-li"><a href="#" class="item-a">About</a></li>
-            <li class="item-li"><a href="#" class="item-a">Login</a></li>
+            <li class="item-li"><a href="login.php" class="item-a">Login</a></li>
         </ul>
     </div>
 </div>
