--- a/views/pages/index.xhtml
+++ b/views/pages/index.xhtml
@@ -1,3 +1,4 @@
+<link href="./css/{{fill target_platform}}/pages/index.css" rel="stylesheet" type="text/css" />
 <div class="box">
     <h2>{{fill titolo}}</h2>
     {{fill articolo unsafe}}
