--- a/views/components/footer.xhtml
+++ b/views/components/footer.xhtml
@@ -1,3 +1,4 @@
+<link href="./css/{{fill target_platform}}/components/footer.css" rel="stylesheet" type="text/css" />
 <div class="footer">
     <p>Filiale di BriccoInGrappa SRL | Per ogni bricco ce ne &egrave; una ;)</p>
 </div>
