--- a/views/components/header.xhtml
+++ b/views/components/header.xhtml
@@ -3,10 +3,10 @@
     <div class="navbar">
         <h2 class="navTitle">Distilleria San Rispino</h2>
         <ul class="menu">
-            <li class="item-li"><a href="#" class="item-a">Home</a></li>
-            <li class="item-li"><a href="#" class="item-a">News</a></li>
-            <li class="item-li"><a href="#" class="item-a">About</a></li>
+            <li class="item-li"><a href="index.php" class="item-a">Home</a></li>
+            <li class="item-li"><a href="cantina.php" class="item-a">Cantina</a></li>
             <li class="item-li"><a href="login.php" class="item-a">Login</a></li>
+            <li class="item-li"><a href="includes/logout.php" class="item-a">Logout</a></li>
         </ul>
     </div>
 </div>
