--- a/views/pages/login.xhtml
+++ b/views/pages/login.xhtml
@@ -1,12 +1,20 @@
 <link href="./css/{{fill target_platform}}/login.css" rel="stylesheet" type="text/css" />
 <form action="login.php" method="post">
-    <div class="container">
-        <label for="uname"><b>Username</b></label>
-        <input type="text" placeholder="Enter Username" name="uname" required>
-        <br />
-        <label for="psw"><b>Password</b></label>
-        <input type="password" placeholder="Enter Password" name="psw" required>
-        <br />
-        <button type="submit">Login</button>
+    <div class="login-form">
+        <div class="login-form-block">
+            <label for="uname">Username</label>
+            <input type="text" placeholder="Enter Username" name="uname" required>
+        </div>
+        <div class="login-form-block">
+            <label for="psw">Password</label>
+            <input type="password" placeholder="Enter Password" name="psw" required>
+        </div>
+        <div class="login-form-block">
+            <button type="submit">Login</button>
+        </div>
+        <div class="login-form-block">
+            <p>New user?</p>
+            <p>Create your account <a href="register.php">here</a></p>
+        </div>    
     </div> 
 </form>
