--- a/views/pages/cantina.xhtml
+++ b/views/pages/cantina.xhtml
@@ -1,1 +1,11 @@
-<link href="./css/{{fill target_platform}}/cantina.css" rel="stylesheet" type="text/css" />
+<link href="./css/{{fill target_platform}}/pages/cantina.css" rel="stylesheet" type="text/css" />
+<!-- search bar -->
+<!-- grid view -->
+<label>{{fill name1}}</label>
+<img class="grappa" src="res/{{fill src1}}"></img>
+<br />
+<label>{{fill name2}}</label>
+<img class="grappa" src="res/{{fill src2}}"></img>
+<br />
+<label>{{fill name3}}</label>
+<img class="grappa" src="res/{{fill src3}}"></img>
