--- a/views/pages/index.xhtml
+++ b/views/pages/index.xhtml
@@ -1,17 +1,9 @@
 <link href="./css/{{fill target_platform}}/pages/index.css" rel="stylesheet" type="text/css" />
+<img class="home-img" src="res/{{fill home_img_path}}" /></img>
 <div class="box">
     <h2>{{fill titolo}}</h2>
     {{fill articolo unsafe}}
 </div>
-<div class="box">
-    <h2>{{fill titolo}}</h2>
-    {{fill articolo unsafe}}
-</div>
-<div class="box">
-    <h2>{{fill titolo}}</h2>
-    {{fill articolo unsafe}}
-</div>
-<div class="box">
-    <h2>{{fill titolo}}</h2>
-    {{fill articolo unsafe}}
+<div class="box contactinfo">
+    {{fill contactinfo}}
 </div>
