grappa.xhtml modificata

--- a/views/pages/grappa.xhtml
+++ b/views/pages/grappa.xhtml
@@ -1,8 +1,14 @@
 <link href="./css/{{fill target_platform}}/pages/grappa.css" rel="stylesheet" type="text/css" />
-<div class="box">
+<div class="grappa">
     <h2>{{fill name}}</h2>
     <img class="grappa" src="res/{{fill src}}"></img>
     <br />
     {{fill desc}}
     <br />
+</div>
+<div class="grappa-commenti">
+    <!--commenti-->
+</div>
+<div class="grappa-commenti-edit">
+    <!--commenti insert nuovo-->
 </div>
