--- a/views/pages/grappa.xhtml
+++ b/views/pages/grappa.xhtml
@@ -1,10 +1,10 @@
 <link href="./css/{{fill target_platform}}/pages/grappa.css" rel="stylesheet" type="text/css" />
 <div class="grappa">
     <h2>{{fill name}}</h2>
-    <img class="grappa" src="res/{{fill src}}"></img>
-    <br />
-    {{fill desc}}
-    <br />
+        <img class="grappa-img" src="res/{{fill src}}"></img>
+    <div class="box">
+        {{fill desc}}
+    </div>
 </div>
 <div class="grappa-commenti">
     <!--commenti-->
