--- a/views/pages/index.xhtml
+++ b/views/pages/index.xhtml
@@ -1,5 +1,5 @@
 <link href="./css/{{fill target_platform}}/pages/index.css" rel="stylesheet" type="text/css" />
-<img class="home-img" src="res/{{fill home_img_path}}" /></img>
+<img class="home-img" src="res/{{fill home_img_path}}"></img>
 <div class="box">
     <h2>{{fill titolo}}</h2>
     {{fill articolo unsafe}}
