--- a/views/components/aside.xhtml
+++ b/views/components/aside.xhtml
@@ -5,37 +5,37 @@
   </div>
   <div class="comments">
     <div class="box">
-        <a href="grappa.php?q={{fill href1}}">
+        <a href="grappa.php?id={{fill href1}}">
             <h3>{{fill title1}}</h3>
             <p>{{fill comment1}}</p>
         </a>
     </div>
     <div class="box">
-        <a href="grappa.php?q={{fill href2}}">
+        <a href="grappa.php?id={{fill href2}}">
             <h3>{{fill title2}}</h3>
             <p>{{fill comment2}}</p>
         </a>
     </div>
     <div class="box">
-        <a href="grappa.php?q={{fill href3}}">
+       <a href="grappa.php?id={{fill href3}}">
             <h3>{{fill title3}}</h3>
             <p>{{fill comment3}}</p>
         </a>
     </div>
     <div class="box">
-        <a href="grappa.php?q={{fill href4}}">
+        <a href="grappa.php?id={{fill href4}}">
             <h3>{{fill title4}}</h3>
             <p>{{fill comment4}}</p>
         </a>
     </div>
     <div class="box">
-        <a href="grappa.php?q={{fill href5}}">
+        <a href="grappa.php?id={{fill href5}}">
             <h3>{{fill title5}}</h3>
             <p>{{fill comment5}}</p>
         </a>
     </div>
     <div class="box">
-        <a href="grappa.php?q={{fill href6}}">
+        <a href="grappa.php?id={{fill href6}}">
             <h3>{{fill title6}}</h3>
             <p>{{fill comment6}}</p>
         </a>
