--- a/views/pages/grappa.xhtml
+++ b/views/pages/grappa.xhtml
@@ -1,7 +1,7 @@
 <link href="./css/{{fill target_platform}}/pages/grappa.css" rel="stylesheet" type="text/css" />
 <div class="grappa">
     <h2>{{fill name}}</h2>
-        <img class="grappa-img" src="res/{{fill src}}"></img>
+    <img class="grappa-img" src="res/{{fill src}}"></img>
     <div class="box">
         {{fill desc}}
     </div>
@@ -11,4 +11,31 @@
 </div>
 <div class="grappa-commenti-edit">
     <!--commenti insert nuovo-->
+</div>
+<hr />
+<h4>Commenti: </h4>
+<div class="comment comm1">
+    <h3 class="comment-username">{{ fill user1 }}</h3>
+    <hr />
+    <p class="comment-paragraph">{{ fill comm1 }}</p>
+</div>
+<div class="comment comm1">
+    <h3 class="comment-username">{{ fill user2 }}</h3>
+    <hr />
+    <p class="comment-paragraph">{{ fill comm2 }}</p>
+</div>
+<div class="comment comm3">
+    <h3 class="comment-username">{{ fill user3 }}</h3>
+    <hr />
+    <p class="comment-paragraph">{{ fill comm3 }}</p>
+</div>
+<div class="comment comm4">
+    <h3 class="comment-username">{{ fill user4 }}</h3>
+    <hr />
+    <p class="comment-paragraph">{{ fill comm4 }}</p>
+</div>
+<div class="comment comm5">
+    <h3 class="comment-username">{{ fill user5 }}</h3>
+    <hr />
+    <p class="comment-paragraph">{{ fill comm5 }}</p>
 </div>
