--- a/css/desktop/components/footer.css
+++ b/css/desktop/components/footer.css
@@ -1,10 +1,12 @@
 .footer {
     text-align: center;
     padding: 0px;
-    background-color: #f4f4f4;
+    background-color: #FFD7BF;
     width: 100%;
     height: 10vh;
     margin: 0;
     vertical-align: middle;
-    display:  inline-block;
+    display: inline-block;
+    border-top-left-radius: 15px;
+    border-top-right-radius: 15px;
 }
