--- a/css/desktop/components/header.css
+++ b/css/desktop/components/header.css
@@ -2,8 +2,10 @@
     margin: 0;
     box-shadow: 1px 1px 4px 0 rgba(0, 0, 0, .1);
     height: 11vh;
-    background-color: #707070;
+    background-color: #FF6000;
     display: block;
+    border-bottom-left-radius: 15px;
+    border-bottom-right-radius: 15px;
 }
 .navTitle {
     float: left;
@@ -18,6 +20,9 @@
 .menu .item-li {
     float: left;
     padding: 5px;
+}
+.item-a {
+    border-radius: 5px;
 }
 .menu .item-li .item-a:hover {
     background-color: #595959;
