--- a/css/desktop/pages/grappa.css
+++ b/css/desktop/pages/grappa.css
@@ -1,6 +1,6 @@
-.content {
+.section {
     display: block;
-    align-content: center;
+    text-align: center;
 }
 .grappa {
     display: block;
@@ -20,6 +20,25 @@
     padding-left: 5px;
     padding-right: 5px;
     margin: 3px;
-    border: 1px solid gray;
+    border: 2px solid orange;
     border-radius: 10px;
+}
+.pagepicker {
+    display: inline-flex;
+    border: 1px solid orange;
+    width: 20%;
+    border-radius: 5px;
+    background-color: #FFAF80;
+}
+.pagepicker-button {
+    width: 25%;
+    border: 1px solid orange;
+}
+textarea {
+    width: 80%;
+}
+.conferma {
+    margin-top: 10px;
+    margin-bottom: 10px;
+    background-color: #FFAF80;
 }
