Aggiunto script che rimuove i commenti se vuoti

--- a/views/pages/grappa.xhtml
+++ b/views/pages/grappa.xhtml
@@ -46,6 +46,7 @@
 <p></p>
 <p></p>
 <p></p>
+<script src="js/pages/grappa.js"></script>
 <hr />
 <h4>Aggiungi commento :</h4>
 <form action="aggiungicommento.php" method="post">
