--- a/views/components/header.xhtml
+++ b/views/components/header.xhtml
@@ -5,7 +5,7 @@
         <ul class="menu">
             <li class="item-li"><a href="index.php" class="item-a">Home</a></li>
             <li class="item-li"><a href="cantina.php" class="item-a">Cantina</a></li>
-            <li class="item-li"><a href="login.php" class="item-a">Login</a></li>
+            <li class="item-li"><a href="login.php" class="item-a">Login</a></li> <!-- Questo deve sparire se il login è già stato eseguito. -->
             <li class="item-li"><a href="includes/logout.php" class="item-a">Logout</a></li>
         </ul>
     </div>
