--- a/views/pages/login.xhtml
+++ b/views/pages/login.xhtml
@@ -1,13 +1,13 @@
 <link href="./css/{{fill target_platform}}/login.css" rel="stylesheet" type="text/css" />
-<form action="login.php" method="post">
+<form action="login.php" method="POST"> <!-- alcuni web server (**di merda, tipo IIS**) fanno distinzione fra POST e post, non andiamo in cerca di rogne. -->
     <div class="login-form">
         <div class="login-form-block">
             <label for="uname">Username</label>
-            <input type="text" placeholder="Enter Username" name="uname" required>
+            <input type="text" placeholder="Enter Username" name="uname" id="uname" required> <!-- Dare un ID è importante: senza POST potrebbe non essere popolato. -->
         </div>
         <div class="login-form-block">
             <label for="psw">Password</label>
-            <input type="password" placeholder="Enter Password" name="psw" required>
+            <input type="password" placeholder="Enter Password" name="psw" id="psw" required>
         </div>
         <div class="login-form-block">
             <button type="submit">Login</button>
