--- a/views/template.xhtml
+++ b/views/template.xhtml
@@ -10,7 +10,7 @@
     <link href="./css/{{fill target_platform}}/template.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
-    {{include components/header}}
+    {{forward components/header}}
     <div class="main">
       {{forward components/aside}}
       <div class="section">
