--- a/views/pages/register.xhtml
+++ b/views/pages/register.xhtml
@@ -1,21 +1,21 @@
-<style src="./css/{{fill target_platform}}/login.css" rel="stylesheet" type="text/css" ></style>
-<form action="includes/adduser.php" method="post">
+<link href="./css/{{fill target_platform}}/register.css" rel="stylesheet" type="text/css" />
+<form action="register.php" method="POST">
     <div class="login-form">
         <div class="login-form-block">
-            <label>New username:</label>
-            <input type="text" name="uname"/>
+            <label for="uname">New username:</label>
+            <input type="text" placeholder="Enter Username" name="uname" id="uname" required/>
         </div>
         <div class="login-form-block">
-            <label>Choose password:</label>
-            <input type="password" name="psw"/>
+            <label for="psw">Choose password:</label>
+            <input type="password" placeholder="Enter Password" name="psw" id="psw" required/>
         </div>
         <div class="login-form-block">
-            <label >Confirm password:</label>
-            <input type="password" name="psw"/>
+            <label for="psw2">Confirm password:</label>
+            <input type="password" placeholder="Confirm Password" name="psw2" id="psw2" required/>
         </div>
         <div class="login-form-block">
-            <label>Email:</label>
-            <input type="text" name="email"/>
+            <label for="email">Email:</label>
+            <input type="text" placeholder="Enter Email" name="email" id="email" required/>
         </div>
         <div class="login-form-block">
             <button type="submit">Register</button>
